<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/black"
    tools:context="me.example.alansproject.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/setTeams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/setTeams"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/setTeamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/setTeamA"
        android:textColor="@color/grey" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:text="V"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/setTeamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/setTeamB"
        android:textColor="@color/grey" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="140dp"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/setHomeTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="180dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/setHomeTeam"
        android:textColor="@color/grey" />

    <TextView
        android:id="@+id/setTimer"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="220dp"
        android:text="@string/setTimer"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/timerButton"
        android:layout_width="46dp"
        android:layout_height="37dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="260dp"
        android:background="@color/green"
        android:text="@string/timerButton" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="350dp"
        android:background="@color/white"
        android:text="@string/continueButton" />

</FrameLayout>

